--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -24,6 +24,8 @@ jobs:
         run: python -m pip install --upgrade pip && pip install -r requirements.txt
       - name: Build Site
         run: mkdocs build
+      - name: Postprocess
+        run: cp -r archives/* ./site/
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
