--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build Site
         run: mkdocs build
       - name: Postprocess
-        run: cp -r archives/* ./site/
+        run: cp -r archive ./site/
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
